# ndown

./: .gitignore  Cargo.toml  README.md  flake.nix  story.md  untitled.md
.ai/: brain.md  idea.md  plan.md  suivi.md
.kiro/agents/: makepad_ndown.json
src/: app.rs  block.rs  block_editor.rs  block_editor_old.rs  editor_state.rs  lib.rs  logger.rs  main.rs  theme.rs
src/editor/: mod.rs  view.rs
src/editor/model/: block.rs  document.rs  mod.rs
src/file_explorer/: mod.rs
src/markdown/: inline.rs  mod.rs  parser.rs
src/model/: block.rs  document.rs  mod.rs
src/outline_panel/: mod.rs
src/panel/: mod.rs
src/rich_text_editor/: cursor.rs  events.rs  history.rs  mod.rs  types.rs  widget.rs
src/rich_text_input/: actions.rs  cursor.rs  formatting.rs  history.rs  inline.rs  mod.rs  text_mapping.rs  widget.rs
src/storage/: local_storage.rs  mod.rs
src/templates/: generator.rs
src/top_bar/: mod.rs  tabs.rs
src/ui/: mod.rs  template_selector.rs
src/ui/components/: block_renderer.rs  indentation.rs  inline_formatter.rs  mod.rs  ordered_list.rs  rich_text_editor.rs  rich_text_renderer.rs
src/ui/editor/: mod.rs  view.rs
src/ui/editor/rich_text_editor/: mod.rs
src/ui/events/: mod.rs
src/ui/file_explorer/: mod.rs
src/ui/outline_panel/: mod.rs
src/ui/top_bar/: mod.rs  tabs.rs
