[package]
name = "ndown"
version = "0.1.0"
edition = "2021"
include = ["src/**/*", "Cargo.toml", "assets/**/*"]

[dependencies]
makepad-widgets = { git = "https://github.com/makepad/makepad", rev = "774a07c" }
makepad-code-editor = { git = "https://github.com/makepad/makepad", rev = "774a07c" }
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
unicode-segmentation = "1.10"

[workspace]

[profile.dev]
split-debuginfo = "unpacked"
incremental = false
codegen-units = 16

[profile.dev.build-override]
codegen-units = 16

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
incremental = false

[profile.release.package."*"]
opt-level = 3
codegen-units = 16
